Revert "date overlap issue"
This reverts commit 048e94e3683765bbd3e96fdead077813c3841848.

--- a/src/components/bottom/Bottom.css
+++ b/src/components/bottom/Bottom.css
@@ -39,12 +39,5 @@
     margin-right: 0;
 }
 @media screen and (max-width:620px) {
-    .filter{
-        display: block;
-    }
     
-    .filterDate{
-        display: block;
-        margin-top: 15px;
-    }
 }
